k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db2
spec:
  selector:
    matchLabels:
      app: my-db2
  template:
    metadata:
      labels:
        app: my-db2
    spec:
      containers:
        - name: my-db2
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: bijou2
              mountPath: /data/db
      volumes:
        - name: bijou2
          persistentVolumeClaim:
            claimName: mongo-pvc2
