k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-new-ingress2345
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test2.anaeleboo.com
    - test3.anaeleboo.com
    secretName: example-tls5
  rules:
  - host: test2.anaeleboo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-knote-service2
            port:
              number: 80
  - host: test3.anaeleboo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app-service2
            port:
              number: 80
